--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
 
       - uses: actions/checkout@v1
 
+      - run: ls
+
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
